Revision history for Dancer

1.3124 2014-05-09

    [ ENHANCEMENTS ]
    * Also check X-Forwarded-Proto. (GH#1015, Andy Jones)
    * Update bundle jQuery to v1.11.0. (GH#1018, Michal Wojciechowski)
    * Add session support to the skeleton config. (GH#1008. Gabor Szabo)

    [ BUG FIXES ]
    * Remove print statement in Dancer::ModuleLoad::require. 
        (GH#1021, John Wittkoski)
    * Test was failing if JSON module was absent. 
        (GH#1022, Yanick Champoux)
    * Allow for routes evaluating to false ('0', '', etc). 
        (GH#1020, Yanick Champoux)

    [DOCUMENTATION]
    * Specify defaults in POD. (GH#1023, isync)
    * Fix doc for params(). (GH#1025, reported by Warren Young)

    [ MISC ]
    * Update mailing list url in README. (GH#1017, Racke)
    * Markdownify the README. (GH#986, Chris Seymour)

1.3123 2014-04-12

   [ BUG FIXES ]
   * Test was skipping wrong number of tests if JSON was absent.

1.3122 10.04.2014

   [ DOCUMENTATION ]
   * GH #995: Documentation improvements. (Colin Kuskie)

   [ BUG FIXES ]
   * Serializer::Mutable now consider 'Accept' before 'Content-Type'.
    (GH#996, Bernhard Reutner-Fischer)
   * Serializer::Mutable now correctly deals with content-types
        with charsets. (GH#996, Bernhard Reutner-Fischer)
   * Without Clone(), Dancer::Error::dumper() could clobber
        values in deep structures. (GH#1006, fix by asergei)
   * 'session_name' in Dancer::Session::Abstract couldn't be
        redefined. (GH#1004, patch by Lee Carmichael)

   [ MISC ]
   * Unused function 'path_no_verify' removed. (GH#998, 
        reported by mjemmeson)

1.3121 2.02.2014

    [ ENHANCEMENTS ]
    * GH #994: change heuristic so that
        'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
        is not recognized as text. (Skeeve)
    * GH #987: get_current_session() now accepts option 'no_update'.
        (Lee Carmichael)

    [ DOCUMENTATION ]
    * GH #983: Correction of various typos. (Akash Ayare)